[workspace]
members = [
    "controller",
    "hyphae",
    "ipfs-unixfs",
    "local-dev-environment/desktop/radio-service",
    "local-storage",
    "messages",
    "myceli",
    "transports"
]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "Apache-2.0/MIT"
rust-version = "1.65"
repository = "https://github.com/ipfs-shipyard/space"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-channel = "1.7.1"
async-recursion = "1"
async-stream = "0.3.3"
async-trait = "0.1.57"
base64 = "0.20.0"
bytes = "1.1"
cid = "0.9"
config = "0.13.1"
criterion = "0.4"
fastmurmur3 = "0.1.2"
futures = "0.3.24"
libipld = "0.15"
multihash = "0.17"
num_enum = "0.5.7"
once_cell = "1.15"
proptest = "1"
prost = "0.11"
prost-build = "0.11.1"
rand = "0.8.5"
reqwest = { version = "0.11.10", default-features = false}
serde = "1"
serde_json = "1.0.87"
tempfile = "3.3"
tokio = "1"
tokio-util = "0.7"
tracing = "0.1.34"
unsigned-varint = "0.7.1"
url = "2.2.2"