[workspace]
members = [
    "controller",
    "hyphae",
    "ipfs-unixfs",
    "local-dev-environment/desktop/radio-service",
    "local-storage",
    "messages",
    "myceli",
    "transports"
]

[workspace.package]
version = "0.6.3"
edition = "2021"
license = "Apache-2.0/MIT"
rust-version = "1.68.1"
repository = "https://github.com/ipfs-shipyard/space"

[workspace.dependencies]
# External deps
anyhow = { version = "1", features = ["backtrace"] }
assert_fs = "1"
async-recursion = "1"
async-stream = "0.3.3"
blake2 = "0.10.6"
bytes = "1.1"
cid = "0.9"
clap = { version = "4.0.15", features = ["derive"] }
criterion = "0.4"
fastmurmur3 = "0.1.2"
figment = { version = "0.10", features = ["toml"] }
file-hashing = "0.1.1"
futures = "0.3.24"
libipld = "0.15"
multihash = "0.17"
num_enum = "0.5.7"
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive", "std"] }
parity-scale-codec-derive = "3.1.3"
proptest = "1"
prost = "0.11"
prost-build = "0.11.1"
rand = "0.8.5"
reqwest = { version = "0.11.10", default-features = false}
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = "1"
serde_derive = "1"
serde_json = "1.0.87"
tempfile = "3.3"
thiserror = "1"
tokio = "1"
tokio-serial = "5.4"
tokio-util = "0.7"
toml = "0.7"
tracing = "0.1.34"
tracing-subscriber = "0.3.14"

# Internal deps
ipfs-unixfs = { path = "ipfs-unixfs" }
local-storage = { path = "local-storage" }
messages = { path = "messages" }
transports = { path = "transports" }