[package]
name = "app-api-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.0.15", features = ["cargo", "derive"] }
block-streamer = { path = "../block-streamer" }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util"] }