[package]
name = "app-api-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.0.15", features = ["cargo", "derive"] }
messages = { path = "../messages" }
serde_cbor_2 = "0.12.0-dev"
serde_json = "1"
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive", "std"] }
tokio = { version = "1", features = ["net", "rt", "macros", "time"] }