[package]
name = "block-ship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1.1"
cid = {version = "0.9", features = ["scale-codec"] }
futures = "0.3.21"
iroh-unixfs = "0.2.0"
local-storage = { path = "../local-storage" }
messages = { path = "../messages" }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
parity-scale-codec-derive = "3.1.3"
rand = "0.8.5"
serde = "1"
tokio = { version = "1", features = ["fs", "io-util"] }
tracing = "0.1"