[package]
name = "block-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
iroh-unixfs = "0.2.0"
tokio = { version = "1", features = ["fs", "io-util"] }
cid = {version = "0.9", features = ["scale-codec"] }
futures = "0.3.21"
clap = { version = "4.0.15", features = ["derive"] }
rand = "0.8.5"
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
parity-scale-codec-derive = "3.1.3"
bytes = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
block-ship = { path = "../block-ship" }
serde_json = "1"
serde = "1"