[package]
name = "block-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cid = {version = "0.9", features = ["scale-codec"] }
clap = { version = "4.0.15", features = ["derive"] }
local-storage = { path = "../local-storage" }
messages = { path = "../messages" }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive", "std"] }
tokio = { version = "1", features = ["fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_fs = "1"
names = { version = "0.14", default-features = false }