[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
dirs = "5.0.1"
figment.workspace = true
log.workspace = true
serde.workspace = true
serde_derive.workspace = true