[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.0.15", features = ["cargo", "derive"] }
messages = { path = "../messages" }
myceli = { path = "../myceli" }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt", "macros", "time"] }
transports = { path = "../transports" }