[package]
name = "controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
config.workspace = true
env_logger.workspace = true
log.workspace = true
messages.workspace = true
serde_json.workspace = true
tokio.workspace = true
transports.workspace = true