[package]
name = "hyphae"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
figment.workspace = true
messages.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "multipart"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transports.workspace = true