[package]
name = "hyphae"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
cid.workspace = true
clap.workspace = true
env_logger.workspace = true
figment.workspace = true
ipfs-unixfs.workspace = true
log.workspace = true
messages = { workspace = true, features = ["proto_all"] }
reqwest = { workspace = true, features = ["blocking", "json", "multipart"] }
serde.workspace = true
serde_json.workspace = true
transports.workspace = true
chrono = "0.4.26"
thiserror.workspace = true