[package]
name = "local-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cid = "0.9"
bytes = "1"
futures = "0.3.21"
ipfs-unixfs = { path = "../ipfs-unixfs" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.34"

[dev-dependencies]
assert_fs = "1"
rand = "0.8"