[package]
name = "local-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cid.workspace = true
bytes.workspace = true
futures.workspace = true
ipfs-unixfs.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["io-util"] }
tracing.workspace = true

[dev-dependencies]
assert_fs.workspace = true
rand.workspace = true