[package]
name = "local-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cid.workspace = true
bytes.workspace = true
env_logger = { workspace = true, optional = true }
futures.workspace = true
ipfs-unixfs.workspace = true
log.workspace = true
rusqlite = { workspace = true, optional = true }
smalog = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
#tokio-util = { workspace = true, features = ["io-util"] }

[features]
big = ["sqlite", "good_log"]
small = ["files", "small_log"]

good_log = []
small_log = []
sqlite = ["dep:rusqlite"]
files = []

[dev-dependencies]
assert_fs.workspace = true
rand.workspace = true
