[package]
name = "messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cid = { version = "0.10" }
clap = { version = "4.0.15", features = ["derive"] }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive", "std"] }
parity-scale-codec-derive = "3.1.3"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }