[package]
name = "messages"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid.workspace = true
clap.workspace = true
parity-scale-codec.workspace = true
parity-scale-codec-derive.workspace = true
serde.workspace = true
