[package]
name = "myceli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cid = { workspace = true, features = ["scale-codec"] }
config.workspace = true
env_logger = { workspace = true, optional = true }
figment.workspace = true
ipfs-unixfs.workspace = true
libipld.workspace = true
local-storage = { path = "../local-storage", default-features = false }
log.workspace = true
messages.workspace = true
parity-scale-codec.workspace = true
serde.workspace = true
smalog = { workspace = true, optional = true }
tokio.workspace = true
toml.workspace = true
transports.workspace = true

[features]
big = ["sqlite", "good_log"]
small = ["files", "small_log"]
good_log = ["dep:env_logger", "local-storage/good_log"]
small_log = ["dep:smalog", "local-storage/small_log"]
sqlite = ["local-storage/sqlite"]
files = ["local-storage/files"]

[dev-dependencies]
assert_fs.workspace = true
blake2.workspace = true
file-hashing.workspace = true
futures.workspace = true
ipfs-unixfs.workspace = true
rand.workspace = true
local-storage.workspace = true
