[package]
name = "transports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cid.workspace = true
messages.workspace = true
parity-scale-codec.workspace = true
parity-scale-codec-derive.workspace = true
rand.workspace = true
serde.workspace = true
tracing.workspace = true