[package]
name = "transports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cid.workspace = true
log.workspace = true
messages.workspace = true
parity-scale-codec.workspace = true
parity-scale-codec-derive.workspace = true
rand.workspace = true
serde.workspace = true
serde_derive.workspace = true
tracing = { workspace = true, optional = true }
smalog = { workspace = true, optional = true }

[features]
good_log = ["dep:tracing"]
small_log = ["dep:smalog"]
