[package]
name = "transports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid.workspace = true
derive-error.workspace = true
env_logger = { workspace = true, optional = true }
log.workspace = true
messages = { workspace = true, features = [] }
parity-scale-codec.workspace = true
parity-scale-codec-derive.workspace = true
rand.workspace = true
serde.workspace = true
serde_derive.workspace = true
smalog = { workspace = true, optional = true }

[features]
good_log = ["dep:env_logger"]
small_log = ["dep:smalog"]
proto_ship = ["messages/proto_ship"]
proto_sync = ["messages/proto_sync"]
