[package]
name = "testing-scenarios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
file-hashing.workspace = true
myceli.workspace = true
transports.workspace = true
messages.workspace = true
assert_fs.workspace = true
blake2.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }