[package]
name = "radio-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "5.4"
tokio = { version = "1.8", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"
clap = { version = "4.0", features = ["derive"] }