[package]
name = "radio-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.8", features = ["macros", "rt", "rt-multi-thread"] }
tokio-serial = "5.4"
tracing = "0.1"
tracing-subscriber = "0.3"