[package]
name = "rfm69-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
tokio.workspace = true
tokio-serial.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true